--- a/EdgeRenderer/EdgeRenderer.vcxproj.filters
+++ b/EdgeRenderer/EdgeRenderer.vcxproj.filters
@@ -63,4 +63,20 @@
       <Filter>Assets</Filter>
     </Image>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="App.cpp" />
+    <ClCompile Include="EdgeRendererMain.cpp" />
+    <ClCompile Include="pch.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="App.h" />
+    <ClInclude Include="EdgeRendererMain.h" />
+    <ClInclude Include="pch.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <AppxManifest Include="Package.appxmanifest" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="EdgeRenderer_TemporaryKey.pfx" />
+  </ItemGroup>
 </Project>
